# kvm-agent

./: .env.example  .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  install.sh  uninstall.sh
.github/workflows/: release.yml
configs/: default.toml  dev.toml  prod.toml
package/: aurora-kvm-agent.service  env.example
proto/agent/registry/v1/: agent_common.proto  agent_enrollment.proto  agent_registry.proto  agent_telemetry.proto
proto/hypervisor/runtime/v1/: runtime_assignment.proto
proto/hypervisor/telemetry/v1/: hypervisor_telemetry.proto
src/: lib.rs  main.rs
src/agent/: bootstrap.rs  command_handler.rs  command_ledger.rs  frames.rs  heartbeat.rs  mod.rs  registration.rs  registry.rs  telemetry.rs
src/app/: context.rs  lifecycle.rs  mod.rs  state.rs
src/config/: agent.rs  app.rs  grpc.rs  mod.rs  runtime.rs  worker.rs
src/model/: host.rs
src/repository/: vm.rs
src/service/: host.rs
src/telemetry/: logging.rs
src/transport/grpc/: mod.rs  pb.rs  server.rs
src/transport/http/: health.rs
src/worker/: dispatcher.rs  mod.rs  pool.rs
tests/: bootstrap.rs  command_ledger.rs  config.rs  telemetry.rs
tests/support/: mod.rs
