[package]
name = "vm-agent"
version = "0.1.0"
edition = "2021"
description = "VM runtime agent for VM lifecycle orchestration"
build = "build.rs"

[lib]
name = "vm_agent"
path = "src/lib.rs"

[[bin]]
name = "aurora-kvm-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport", "tls", "tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
tower = "0.4"
http = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
tonic-health = "0.12"
prost = "0.13"
prost-types = "0.13"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }
thiserror = "2"
ulid = "1"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
